--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,13 @@
         body {
             margin: 0;
             padding: 0;
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+        }
+        #content {
+            align-self: center;
         }
     </style>
 </head>
